# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  results.txt
include/: camera.h  camera.hpp  color.h  hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  image.h  image.hpp  material.h  material.hpp  ray.h  ray.hpp  scene_loader.hpp  sphere.h  sphere.hpp  timer.hpp  types.h  utils.h  utils.hpp  vec3.h  vec3_utils.h  vec3_utils.hpp
scenes/: cornell_box.yml  teapot.yml  three_spheres.yml  triangle.yml
src/: CMakeLists.txt  aabb.cpp  aabb.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  image.cpp  image.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  ray.cpp  rect.cpp  rect.hpp  renderer.cpp  renderer.hpp  scene_attributes.hpp  scene_loader.cpp  scene_loader.hpp  sphere.cpp  sphere.hpp  texture.cpp  texture.hpp  timer.cpp  triangle.cpp  triangle.hpp  utils.hpp  vec3.cpp  vec3_utils.cpp
